# l-c-c

./: Cargo.toml  README.md  setup-lcc.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.css  index.html  package.json  vite.config.ts
apps/desktop/src/: error.rs  index.css  main.tsx  router.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/layout/: RootLayout.tsx  Sidebar.tsx
apps/desktop/src/components/ui/: card.tsx  dropdown-menu.tsx  tooltip.tsx
apps/desktop/src/components/widgets/: CpuWidget.tsx  MemoryWidget.tsx  NetworkWidget.tsx  StorageWidget.tsx  UpdatesWidget.tsx
apps/desktop/src/lib/: api.ts  utils.ts
apps/desktop/src/pages/: Dashboard.tsx  ServiceManager.tsx  Settings.tsx  SoftwareCenter.tsx
crates/core/: Cargo.toml
crates/core/src/: database.rs  distribution.rs  event_bus.rs  lib.rs  plugin_manager.rs  privilege_manager.rs
crates/plugin-api/: Cargo.toml
crates/plugin-api/src/: lib.rs
desktop/: tailwind.config.js
plugins/systemd/: Cargo.toml  lib.rs
scripts/: build.sh
