[package]
name = "lcc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
lcc-plugin-api = { path = "../plugin-api" }

tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
libloading = { workspace = true }
config = { workspace = true }
zbus = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"
