[package]
name = "linux-control-center"
version = "0.1.0"
description = "Linux Control Center - System management suite"
authors = ["LCC Team"]
license = "GPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# Internal crates
lcc-core = { path = "../../../crates/core" }
lcc-plugin-api = { path = "../../../crates/plugin-api" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
